fixed image link issue

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div>
                 <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
                 <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
-                <a href="characters/daili.html"><img src="img/daili.png"/></a>
+                <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
                 <a href="characters/700.html"><img src="img/700.png"/></a>
                 <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
             </div>
