--- a/characters/700.html
+++ b/characters/700.html
@@ -31,7 +31,7 @@
 
 		<p>Character Abilities:</p>
 			<ul>
-				<li><span class="green">敏銳</span>: You may use Lock-On during other players' turns.</li>
+				<li><span class="red">敏銳</span>: You may use Lock-On during other players' turns.</li>
 				<li><span class="red">聯動</span>: Whenever you use Lock-On, draw two cards, and give one card from your hand to another player.</li>
 				<li><span class="red">風度</span>: When you declare victory, you must select a female character in the game to win with you.</li>
 			</ul>
