--- a/characters/daili.html
+++ b/characters/daili.html
@@ -17,27 +17,27 @@
         <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
+		<div id="cardContainer">
+			<div class="image">
+				<img src="../img/DaiLi.png"/>
+			</div>
 
-	<div class="image">
-		<img src="../img/DaiLi.png"/>
-	</div>
+			<div class="charName">
+				<h2>Dai Li</h2>
+			</div>
 
-	<div class="charName">
-		<h2>Dai Li</h2>
-	</div>
+			<div class="explanation">
+				<p class="green">Secret Green Mission:</p>
+					<ul>
+						<li>Collect three or more blue messages.</li>
+					</ul>
 
-	<div class="explanation">
-		<p class="green">Secret Green Mission:</p>
-			<ul>
-				<li>Collect three or more blue messages.</li>
-			</ul>
-
-		<p>Character Abilities:</p>
-			<ul>
-				<li><span class="red">笑裡藏刀</span>: When another player receives a real message you sent out, you may also give a fake message from your hand to that player's board.</li>
-				<li><span class="red">運籌帷幄</span>: Whenever you receive a real message, you may draw one card from the library.</li>
-			</ul>
-	</div>
-
+				<p>Character Abilities:</p>
+					<ul>
+						<li><span class="red">笑裡藏刀</span>: When another player receives a real message you sent out, you may also give a fake message from your hand to that player's board.</li>
+						<li><span class="red">運籌帷幄</span>: Whenever you receive a real message, you may draw one card from the library.</li>
+					</ul>
+			</div>
+		</div>
 	</body>
 	</html>>
