--- a/characters/sistersix.html
+++ b/characters/sistersix.html
@@ -17,27 +17,27 @@
         <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
+		<div id="cardContainer">
+			<div class="image">
+				<img src="../img/SisterSix.png"/>
+			</div>
 
-	<div class="image">
-		<img src="../img/SisterSix.png"/>
-	</div>
+			<div class="charName">
+				<h2>Sister Six (AKA Death Nurse)</h2>
+			</div>
 
-	<div class="charName">
-		<h2>Sister Six (AKA Death Nurse)</h2>
-	</div>
+			<div class="explanation">
+				<p class="green">Secret Green Mission:</p>
+					<ul>
+						<li>Collect six or more messages of any color.</li>
+					</ul>
 
-	<div class="explanation">
-		<p class="green">Secret Green Mission:</p>
-			<ul>
-				<li>Collect six or more messages of any color.</li>
-			</ul>
-
-		<p>Character Abilities:</p>
-			<ul>
-				<li><span class="red">拷問</span>: Whenever you Test another player, you may take a card from that player's hand.</li>
-				<li><span class="red">搜取</span>: When a player dies, you randomly pick one of the cards from the dead player's hand, and can choose either to add that card to your hand or to your message board.</li>
-			</ul>
-	</div>
-
+				<p>Character Abilities:</p>
+					<ul>
+						<li><span class="red">拷問</span>: Whenever you Test another player, you may take a card from that player's hand.</li>
+						<li><span class="red">搜取</span>: When a player dies, you randomly pick one of the cards from the dead player's hand, and can choose either to add that card to your hand or to your message board.</li>
+					</ul>
+			</div>
+		</div>
 	</body>
 	</html>>
