Responsive cards on home page

--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@
                         <h2>Characters</h2>
                     </div>
                     
-                    <div>
-                        <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
-                        <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
-                        <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
-                        <a href="characters/700.html"><img src="img/700.png"/></a>
-                        <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
+                    <div class="row">
+                        <div class="col-md-3 center">
+                            <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
+                        </div>
+                        <div class="col-md-3 center">
+                            <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
+                        </div>
+                        <div class="col-md-3 center">
+                            <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
+                        </div>
+                        <div class="col-md-3 center">
+                            <a href="characters/700.html"><img src="img/700.png"/></a>
+                        </div>
+                        <div class="col-md-3 center">
+                            <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
+                        </div>
                     </div>
                 </div>
             </div>
