Responsive version of cards on homepage

--- a/index.html
+++ b/index.html
@@ -43,20 +43,38 @@
                         <h2>Characters</h2>
                     </div>
                     
-                    <div class="row">
-                        <div class="col-md-3 center">
+                    <div class="row hidden-xs">
+                        <div class="col-md-3 card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
                         </div>
-                        <div class="col-md-3 center">
+                        <div class="col-md-3 card">
                             <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
                         </div>
-                        <div class="col-md-3 center">
+                        <div class="col-md-3 card">
                             <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
                         </div>
-                        <div class="col-md-3 center">
+                        <div class="col-md-3 card">
                             <a href="characters/700.html"><img src="img/700.png"/></a>
                         </div>
-                        <div class="col-md-3 center">
+                        <div class="col-md-3 card">
+                            <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
+                        </div>
+                    </div>
+
+                    <div class="row visible-xs">
+                        <div class="small-card">
+                            <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/700.html"><img src="img/700.png"/></a>
+                        </div>
+                        <div class="small-card">
                             <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
                         </div>
                     </div>
