Removed bootstrap padding on mobile version

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
 
-                    <div class="row visible-xs">
+                    <div class="visible-xs">
                         <div class="small-card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
                         </div>
