added Shining character

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <div class="col-md-3 card">
                             <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
                         </div>
+                         <div class="col-md-3 card">
+                            <a href="characters/shining.html"><img src="img/Shining.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
