added Shining to mobile

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                         <div class="small-card">
                             <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
                         </div>
+                        <div class="small-card">
+                            <a href="characters/shining.html"><img src="img/Shining.png"/></a>
+                        </div>
                     </div>
                 </div>
             </div>
