added images and Goldfinch character

--- a/characters/700.html
+++ b/characters/700.html
@@ -27,12 +27,12 @@
 			</div>
 
 			<div class="explanation">
-				<p class="green">Secret Green Mission:</p>
+				<p class="green">Secret Green Mission</p>
 					<ul>
 						<li>Collect five or more real messages.</li>
 					</ul>
 
-				<p>Character Abilities:</p>
+				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">敏銳</span>: You may use Lock-On during other players' turns.</li>
 						<li><span class="red">聯動</span>: Whenever you use Lock-On, draw two cards, and give one card from your hand to another player.</li>
