--- a/characters/goldfinch.html
+++ b/characters/goldfinch.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Shining</title>
+        <title>Goldfish</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,24 +18,32 @@
 	</head>
 	<body>
 		<div id="cardContainer">
+			<div id="back">
+				<a href="../index.html">Back</a>
+			</div>
 			<div class="image">
-				<img src="../img/Shining.png"/>
+				<img src="../img/Goldfinch.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Shining</h2>
+				<h2>Goldfinch</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Personally kill a player who has collected no real messages.</li>
+						<li>One Red player and one Blue player have died (You do not have to personally kill them).</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">狙擊</span>: Flip up this card, and burn away up to three messages from one other player's board.</li>
+						<li><span class="blue">潛藏伏擊</span>: During your action phase, you may flip up this card to return one other player's message to the top of the library.</li>
+						<li><span class="red">黃雀在後</span>: When another player dies, draw a card. You may also flip open and reveal your identity card; if you do, place up to two black messages from your hand to one player's board.
+					</ul>
+				<p>Cultural Notes</p>
+					<ul>
+						<li>Goldfinch's name (黃雀) is a reference to an old Daoist idiom "螳螂捕蟬，黃雀在後", which directly translates to "The mantis stalks the cicada, unaware of the goldfinch behind". This idiom can be interpreted to mean "to pursue a narrow gain whilst unaware of the danger behind".</li>
 					</ul>
 			</div>
 		</div>
