--- a/characters/fatalperfume.html
+++ b/characters/fatalperfume.html
@@ -27,12 +27,12 @@
 			</div>
 
 			<div class="explanation">
-				<p class="green">Secret Green Mission:</p>
+				<p class="green">Secret Green Mission</p>
 					<ul>
 						<li>None</li>
 					</ul>
 
-				<p>Character Abilities:</p>
+				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">攻守兼備</span>: Whenever you use Lock-On or Decoy, draw two cards, and then place one card from your hand back on top of the library.</li>
 						<li><span class="red">臨危受命</span>: When another player dies, before that player's identity card is revealed, you may remove your identity card face-down from the game, and take the dead player's identity card as your own. Additionally, switch one message from one living player's board with the top of the library.</li>
