--- a/characters/tuxedomask.html
+++ b/characters/tuxedomask.html
@@ -27,12 +27,12 @@
 			</div>
 
 			<div class="explanation">
-				<p class="green">Secret Green Mission:</p>
+				<p class="green">Secret Green Mission</p>
 					<ul>
 						<li>If a female character declares victory, you win instead.</li>
 					</ul>
 
-				<p>Character Abilities:</p>
+				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">英雄</span>: Whenever you receive a fake message, draw two cards. This ability triggers even if the fake message is received via character abilities or the Party card.</li>
 						<li><span class="red">救美</span>: When a female character dies, you may flip open and reveal your identity card. If you do, burn away all of the fake messages in front of yourself as well as the rescued female character.</li>
