--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                          <div class="col-md-3 card">
                             <a href="characters/shining.html"><img src="img/Shining.png"/></a>
                         </div>
+                        <div class="col-md-3 card">
+                            <a href="characters/goldfinch.html"><img src="img/Goldfinch.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -82,6 +85,9 @@
                         </div>
                         <div class="small-card">
                             <a href="characters/shining.html"><img src="img/Shining.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/goldfinch.html"><img src="img/Goldfinch.png"/></a>
                         </div>
                     </div>
                 </div>
