added a back button to the character pages

--- a/characters/shining.html
+++ b/characters/shining.html
@@ -18,6 +18,9 @@
 	</head>
 	<body>
 		<div id="cardContainer">
+			<div id="back">
+				<a href="../index.html">Back</a>
+			</div>
 			<div class="image">
 				<img src="../img/Shining.png"/>
 			</div>
