added all char pics from game website and added steel agent k

--- a/characters/blackrose.html
+++ b/characters/blackrose.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fatal Perfume</title>
+        <title>Black Rose</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,23 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/FatalPerfume.png"/>
+				<img src="../img/BlackRose.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Fatal Perfume</h2>
+				<h2>Black Rose</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>None</li>
+						<li>Personally kill a player who has collected three or more real messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">攻守兼備</span>: Whenever you use Lock-On or Decoy, draw two cards, and then place one card from your hand on top of the library.</li>
-						<li><span class="red">臨危受命</span>: When another player dies, before that player's identity card is revealed, you may remove your identity card face-down from the game, and take the dead player's identity card as your own. Additionally, switch one message from one living player's board with the top of the library.</li>
+						<li><span class="white">潛伏</span>: Hidden Character</li>
+						<li><span class="blue">血染玫瑰</span>: Flip up this card, select a player, and reveal the top card of the library. If the revealed card is black, you may place up to three fake messages from your hand to that player's board. Otherwise, you may place only one fake message.</li>
 					</ul>
 			</div>
 		</div>
