--- a/characters/spychief.html
+++ b/characters/spychief.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fatal Perfume</title>
+        <title>Spy Chief</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,23 +22,28 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/FatalPerfume.png"/>
+				<img src="../img/SpyChief.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Fatal Perfume</h2>
+				<h2>Spy Chief</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>None</li>
+						<li>Collect three or more red messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">攻守兼備</span>: Whenever you use Lock-On or Decoy, draw two cards, and then place one card from your hand on top of the library.</li>
-						<li><span class="red">臨危受命</span>: When another player dies, before that player's identity card is revealed, you may remove your identity card face-down from the game, and take the dead player's identity card as your own. Additionally, switch one message from one living player's board with the top of the library.</li>
+						<li><span class="red">隔牆有耳</span>: When you test a player, you may draw two cards from the library, and then place one card from your hand on top of the library.</li>
+						<li><span class="red">偷龍轉鳳</span>: When a transmitted message reaches you, you may discard one card from your hand to switch the transmitted message with the top card of the library.</li>
+					</ul>
+				<p>Cultural Notes</p>
+					<ul>
+						<li>Spy Chief's first ability, 隔牆有耳, directly translates to "the walls have ears".</li>
+						<li>Spy Chief's second ability, 偷龍轉鳳, is a concept found in Sun Tzu's "Art of War". The literal translation is "steal the dragon and replace it with a phoenix"; This idiom can be interpreted to mean to "replace the original with a fake", or to perpetuate a fraud.</li>
 					</ul>
 			</div>
 		</div>
