--- a/index.html
+++ b/index.html
@@ -29,44 +29,60 @@
         <div id="container">
             <div id="header" class="row">
                 <div class="col-md-12">
-                    <h1>The Message: English Translations</h1>
+                    <h1>The Message: English Translation</h1>
                 </div>
             </div>
             <div class="row">
+            <!--
                 <div id="left" class="col-md-3">
                     Something here
                 </div>
-
-                <div id="right" class="col-md-9">
+            -->
+                <div id="right" class="col-md-12">
 
                     <div class="center">
-                        <h2>Characters</h2>
+                        <h2 class="silver">Characters</h2>
                     </div>
                     
-                    <div class="row hidden-xs">
-                        <div class="col-md-3 card">
+                    <div class="row">
+                        <div class="col-md-2 card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
                         </div>
-                        <div class="col-md-3 card">
+                        <div class="col-md-2 card">
                             <a href="characters/sistersix.html"><img src="img/SisterSix.png"/></a>
                         </div>
-                        <div class="col-md-3 card">
+                        <div class="col-md-2 card">
                             <a href="characters/daili.html"><img src="img/DaiLi.png"/></a>
                         </div>
-                        <div class="col-md-3 card">
+                        <div class="col-md-2 card">
                             <a href="characters/700.html"><img src="img/700.png"/></a>
                         </div>
-                        <div class="col-md-3 card">
+                        <div class="col-md-2 card">
                             <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
                         </div>
-                         <div class="col-md-3 card">
+                        <div class="col-md-2 card">
+                            <a href="characters/professionalkiller.html"><img src="img/ProfessionalKiller.png"/></a>
+                        </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/spychief.html"><img src="img/SpyChief.png"/></a>
+                        </div>
+                         <div class="col-md-2 card">
                             <a href="characters/shining.html"><img src="img/Shining.png"/></a>
                         </div>
-                        <div class="col-md-3 card">
+                        <div class="col-md-2 card">
+                            <a href="characters/blackrose.html"><img src="img/BlackRose.png"/></a>
+                        </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/codebreaker.html"><img src="img/Codebreaker.png"/></a>
+                        </div>
+                        <div class="col-md-2 card">
                             <a href="characters/goldfinch.html"><img src="img/Goldfinch.png"/></a>
                         </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
+                        </div>
                     </div>
-
+<!--
                     <div class="visible-xs">
                         <div class="small-card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
@@ -84,12 +100,28 @@
                             <a href="characters/tuxedomask.html"><img src="img/TuxedoMask.png"/></a>
                         </div>
                         <div class="small-card">
+                            <a href="characters/professionalkiller.html"><img src="img/ProfessionalKiller.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/spychief.html"><img src="img/SpyChief.png"/></a>
+                        </div>
+                        <div class="small-card">
                             <a href="characters/shining.html"><img src="img/Shining.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/blackrose.html"><img src="img/BlackRose.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/codebreaker.html"><img src="img/Codebreaker.png"/></a>
                         </div>
                         <div class="small-card">
                             <a href="characters/goldfinch.html"><img src="img/Goldfinch.png"/></a>
                         </div>
+                        <div class="small-card">
+                            <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
+                        </div>
                     </div>
+                    -->
                 </div>
             </div>
          
