--- a/characters/professionalkiller.html
+++ b/characters/professionalkiller.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fatal Perfume</title>
+        <title>Professional Killer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,23 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/FatalPerfume.png"/>
+				<img src="../img/ProfessionalKiller.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Fatal Perfume</h2>
+				<h2>Professional Killer</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>None</li>
+						<li>Starting from after one player has already died in the game, personally kill any one other player.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">攻守兼備</span>: Whenever you use Lock-On or Decoy, draw two cards, and then place one card from your hand on top of the library.</li>
-						<li><span class="red">臨危受命</span>: When another player dies, before that player's identity card is revealed, you may remove your identity card face-down from the game, and take the dead player's identity card as your own. Additionally, switch one message from one living player's board with the top of the library.</li>
+						<li><span class="red">連擊</span>: Whenever a player receives a fake message you sent out, draw a card. You may then choose to place another fake message from your hand to that player's board.</li>
+						<li><span class="red">預謀</span>: Your Decoy cards can be used as Lock-On cards.</li>
 					</ul>
 			</div>
 		</div>
