--- a/characters/steelagentk.html
+++ b/characters/steelagentk.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fatal Perfume</title>
+        <title>Steel Agent K</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,23 +22,24 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/FatalPerfume.png"/>
+				<img src="../img/SteelAgentK.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Fatal Perfume</h2>
+				<h2>Steel Agent K</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>None</li>
+						<li>Collect three or more blue messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">攻守兼備</span>: Whenever you use Lock-On or Decoy, draw two cards, and then place one card from your hand on top of the library.</li>
-						<li><span class="red">臨危受命</span>: When another player dies, before that player's identity card is revealed, you may remove your identity card face-down from the game, and take the dead player's identity card as your own. Additionally, switch one message from one living player's board with the top of the library.</li>
+						<li><span class="white">潛伏</span>: Hidden Character</li>
+						<li><span class="blue">速譯</span>: While a message is being transmitted, you may flip up this card to peek at the message and draw one card from the library.</li>
+						<li><span class="red">洞悉</span>: Whenever a player plays a Peek card, you may flip down this card.
 					</ul>
 			</div>
 		</div>
