reverting after testing without the visible-xs class

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h2 class="silver">Characters</h2>
                     </div>
                     
-                    <div class="row">
+                    <div class="row hidden-xs">
                         <div class="col-md-2 card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
                         </div>
@@ -82,7 +82,7 @@
                             <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
                         </div>
                     </div>
-<!--
+
                     <div class="visible-xs">
                         <div class="small-card">
                             <a href="characters/fatalperfume.html"><img src="img/FatalPerfume.png"/></a>
@@ -121,7 +121,6 @@
                             <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
                         </div>
                     </div>
-                    -->
                 </div>
             </div>
          
