added Holmes and appended cultural notes to Dai Li

--- a/characters/holmes.html
+++ b/characters/holmes.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dai Li</title>
+        <title>Holmes</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,27 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/DaiLi.png"/>
+				<img src="../img/Holmes.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Dai Li</h2>
+				<h2>Holmes</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Collect three or more blue messages.</li>
+						<li>Collect three or more red messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">笑裡藏刀</span>: When another player receives a real message you sent out, you may also place a fake message from your hand to that player's board.</li>
-						<li><span class="red">運籌帷幄</span>: Whenever you receive a real message, you may draw one card from the library.</li>
-					</ul>
-				<p>Cultural Notes</p>
-					<ul>
-						<li>Dai Li is a reference to the real historical figure of the <a href="http://en.wikipedia.org/wiki/Dai_Li">same name</a> who served as the head of Chiang Kai-shek's Military Intelligence Service from 1928 to 1946.</li>
+						<li><span class="red">揭露</span>: When a transmitted message reaches you, you may choose to discard one black card from your hand; if you do, flip open the transmitted message. If the revealed message is black, draw two cards.</li>
+						<li><span class="red">真相</span>: Whenever a player uses a Test card, you are able to first take a look at that Test card.</li>
 					</ul>
 			</div>
 		</div>
