--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                         <div class="col-md-2 card">
                             <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
                         </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/holmes.html"><img src="img/Holmes.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -120,6 +123,9 @@
                         <div class="small-card">
                             <a href="characters/steelagentk.html"><img src="img/SteelAgentK.png"/></a>
                         </div>
+                        <div class="small-card">
+                            <a href="characters/holmes.html"><img src="img/Holmes.png"/></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -127,7 +133,7 @@
 
             <div id="footer" class="row">
                 <div class="col-md-12">
-                    <h2>will fill in later</h2>
+                    <h2>I do not own these images.</h2>
                 </div>
             </div>
         </div>
