added xiaobai, beret, and finished steel agent k

--- a/characters/beret.html
+++ b/characters/beret.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Beret</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/Beret.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Beret</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains four Lock-On cards.</li>
+						<li>Collect exactly two red messages and two blue messages.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.
+						<li><span class="red">揭露</span>: The black cards in your hand can be used as Lock-On cards.</li>
+						<li><span class="red">真相</span>: When a player receives a black message you sent out, you may transfer one red or blue message from that player's board to your own.</li>
 					</ul>
 			</div>
 		</div>
