--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                         <div class="col-md-2 card">
                             <a href="characters/holmes.html"><img src="img/Holmes.png"/></a>
                         </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/xiaobai.html"><img src="img/XiaoBai.png"/></a>
+                        </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/beret.html"><img src="img/Beret.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -125,6 +131,12 @@
                         </div>
                         <div class="small-card">
                             <a href="characters/holmes.html"><img src="img/Holmes.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/xiaobai.html"><img src="img/XiaoBai.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/beret.html"><img src="img/Beret.png"/></a>
                         </div>
                     </div>
                 </div>
