--- a/characters/xiaobai.html
+++ b/characters/xiaobai.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Steel Agent K</title>
+        <title>Xiao Bai</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/SteelAgentK.png"/>
+				<img src="../img/XiaoBai.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>Steel Agent K</h2>
+				<h2>Xiao Bai (Little White)</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Your hand contains four Lock-On cards.</li>
+						<li>Be the first player to die. If another player has already died first, then the entire red team or the entire blue team must die.</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">警覺</span>: When a player uses an action card, you may flip up this card to Cancel that card. As this Cancel is a character ability, it cannot be countered by other Cancel cards.</li>
-						<li><span class="red">掩護</span>: You may transfer a black message from one other player's board to your own. If you do, flip down this card.
+						<li><span class="red">喬裝</span>: This character is considered both a male and a female.</li>
+						<li><span class="red">收買</span>: During your action phase, you may select five cards from your hand to give to a player. If you do, transfer one message from that player's board to your own.</li>
 					</ul>
 			</div>
 		</div>
