added bigbeauty and blade characters. updated wording on some others

--- a/characters/blackrose.html
+++ b/characters/blackrose.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
-						<li><span class="blue">血染玫瑰</span>: Flip up this card, select a player, and reveal the top card of the library. If the revealed card is black, you may place up to three fake messages from your hand to that player's board. Otherwise, you may place only one fake message.</li>
+						<li><span class="blue">血染玫瑰</span>: Flip up this card, select a player, and reveal the top card of the library. If the revealed card is black, you may place up to three fake messages from your hand onto that player's board. Otherwise, you may place only one fake message.</li>
 					</ul>
 			</div>
 		</div>
