--- a/characters/blade.html
+++ b/characters/blade.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>700</title>
+        <title>Blade</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,24 +22,23 @@
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
-				<img src="../img/700.png"/>
+				<img src="../img/Blade.png"/>
 			</div>
 
 			<div class="charName">
-				<h2>700 (AKA Chinese James Bond)</h2>
+				<h2>Blade</h2>
 			</div>
 
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>Collect five or more real messages.</li>
+						<li>One Red player and one Blue player must die (You do not have to personally kill them).</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">敏銳</span>: You may use Lock-On cards during other players' turns.</li>
-						<li><span class="red">聯動</span>: Whenever you use Lock-On, draw two cards, and give one card from your hand to another player.</li>
-						<li><span class="red">風度</span>: When you declare victory, you must select a female character in the game to win with you.</li>
+						<li><span class="red">亮劍</span>: During your action phase, designate one player to Lock-On to. You may only use this ability once per turn. As this Lock-On is a character ability, it cannot be countered by Cancel cards.</li>
+						<li><span class="red">嗜血</span>: Whenever a player dies, draw three cards.</li>
 					</ul>
 			</div>
 		</div>
