--- a/characters/daili.html
+++ b/characters/daili.html
@@ -37,7 +37,7 @@
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">笑裡藏刀</span>: When another player receives a real message you sent out, you may also place a fake message from your hand to that player's board.</li>
+						<li><span class="red">笑裡藏刀</span>: When another player receives a real message you sent out, you may also place a fake message from your hand onto that player's board.</li>
 						<li><span class="red">運籌帷幄</span>: Whenever you receive a real message, you may draw one card from the library.</li>
 					</ul>
 				<p>Cultural Notes</p>
