--- a/characters/professionalkiller.html
+++ b/characters/professionalkiller.html
@@ -37,7 +37,7 @@
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">連擊</span>: Whenever a player receives a fake message you sent out, draw a card. You may then choose to place another fake message from your hand to that player's board.</li>
+						<li><span class="red">連擊</span>: Whenever a player receives a fake message you sent out, draw a card. You may then choose to place another fake message from your hand onto that player's board.</li>
 						<li><span class="red">預謀</span>: Your Decoy cards can be used as Lock-On cards.</li>
 					</ul>
 			</div>
