--- a/characters/spychief.html
+++ b/characters/spychief.html
@@ -37,13 +37,13 @@
 
 				<p>Character Abilities</p>
 					<ul>
-						<li><span class="red">隔牆有耳</span>: When you test a player, you may draw two cards from the library, and then place one card from your hand on top of the library.</li>
+						<li><span class="red">隔牆有耳</span>: When you test a player, you may draw two cards from the library, and then place one card from your hand onto the top of the library.</li>
 						<li><span class="red">偷龍轉鳳</span>: When a transmitted message reaches you, you may discard one card from your hand to switch the transmitted message with the top card of the library.</li>
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
 						<li>Spy Chief's first ability, 隔牆有耳, directly translates to "the walls have ears".</li>
-						<li>Spy Chief's second ability, 偷龍轉鳳, is a concept found in Sun Tzu's "Art of War". The literal translation is "steal the dragon and replace it with a phoenix"; This idiom can be interpreted to mean to "replace the original with a fake", or to perpetuate a fraud.</li>
+						<li>Spy Chief's second ability, 偷龍轉鳳, is a concept found in Sun Tzu's "Art of War". The literal translation is "steal the dragon and replace it with a phoenix"; This idiom can be interpreted to mean "replace the original with a fake" or simply, to perpetuate a fraud.</li>
 					</ul>
 			</div>
 		</div>
