--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div id="container">
             <div id="header" class="row">
                 <div class="col-md-12">
-                    <h1>The Message: English Translation</h1>
+                    <h1>風聲 | The Message</h1>
+                    <p>Unofficial English Translation</p>
                 </div>
             </div>
             <div class="row">
@@ -90,6 +91,12 @@
                         <div class="col-md-2 card">
                             <a href="characters/beret.html"><img src="img/Beret.png"/></a>
                         </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/bigbeauty.html"><img src="img/BigBeauty.png"/></a>
+                        </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/blade.html"><img src="img/Blade.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -137,6 +144,12 @@
                         </div>
                         <div class="small-card">
                             <a href="characters/beret.html"><img src="img/Beret.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/bigbeauty.html"><img src="img/BigBeauty.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/blade.html"><img src="img/Blade.png"/></a>
                         </div>
                     </div>
                 </div>
