--- a/characters/goldfinch.html
+++ b/characters/goldfinch.html
@@ -32,18 +32,18 @@
 			<div class="explanation">
 				<p class="green">Secret Green Mission</p>
 					<ul>
-						<li>One Red player and one Blue player have died (You do not have to personally kill them).</li>
+						<li>One Red player and one Blue player must die (You do not have to personally kill them).</li>
 					</ul>
 
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="white">潛伏</span>: Hidden Character</li>
 						<li><span class="blue">潛藏伏擊</span>: During your action phase, you may flip up this card to return one other player's message to the top of the library.</li>
-						<li><span class="red">黃雀在後</span>: When another player dies, draw a card. You may also flip open and reveal your identity card; if you do, place up to two black messages from your hand to one player's board.
+						<li><span class="red">黃雀在後</span>: When another player dies, draw a card. You may also flip open and reveal your identity card; if you do, place up to two black messages from your hand onto one player's board.
 					</ul>
 				<p>Cultural Notes</p>
 					<ul>
-						<li>Goldfinch's name (黃雀) is a reference to an old Daoist idiom "螳螂捕蟬，黃雀在後", which directly translates to "The mantis stalks the cicada, unaware of the goldfinch behind". This idiom can be interpreted to mean "to pursue a narrow gain whilst unaware of the danger behind".</li>
+						<li>Goldfinch's name (黃雀) is a reference to an old Daoist idiom "螳螂捕蟬，黃雀在後", which roughly translates to "The mantis stalks the cicada, unaware of the goldfinch behind". This idiom can be interpreted to mean "to pursue a narrow gain whilst unaware of the danger behind".</li>
 					</ul>
 			</div>
 		</div>
