--- a/characters/sistersix.html
+++ b/characters/sistersix.html
@@ -38,7 +38,7 @@
 				<p>Character Abilities</p>
 					<ul>
 						<li><span class="red">拷問</span>: Whenever you Test another player, you may take a card from that player's hand.</li>
-						<li><span class="red">搜取</span>: When a player dies, you randomly pick one of the cards from the dead player's hand, and can choose either to add that card to your hand or to your message board.</li>
+						<li><span class="red">搜取</span>: When a player dies, you randomly pick one of the cards from the deceased player's hand, and can choose either to add that card to your hand or to your message board.</li>
 					</ul>
 			</div>
 		</div>
