added phantom character and testing hiding back button on mobile

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <div class="col-md-2 card">
                             <a href="characters/blade.html"><img src="img/Blade.png"/></a>
                         </div>
+                        <div class="col-md-2 card">
+                            <a href="characters/phantom.html"><img src="img/Phantom.png"/></a>
+                        </div>
                     </div>
 
                     <div class="visible-xs">
@@ -150,6 +153,9 @@
                         </div>
                         <div class="small-card">
                             <a href="characters/blade.html"><img src="img/Blade.png"/></a>
+                        </div>
+                        <div class="small-card">
+                            <a href="characters/phantom.html"><img src="img/Phantom.png"/></a>
                         </div>
                     </div>
                 </div>
