--- a/characters/codebreaker.html
+++ b/characters/codebreaker.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div id="cardContainer">
-			<div id="back">
+			<div id="back" class="hidden-xs">
 				<a href="../index.html">Back</a>
 			</div>
 			<div class="image">
